[213776]: [xslt] URIResolver - cleaned up find bug errors https://bugs.eclipse.org/bugs/show_bug.cgi?id=213776