@@ -44,8 +44,7 @@ import org.eclipse.wst.xsl.internal.debug.ui.XSLDebugUIPlugin;
  * 
  * @author Doug Satchwell
  */
-public class MultipleInputDialog extends Dialog
-{
+public class MultipleInputDialog extends Dialog {
 	protected static final String FIELD_NAME = "FIELD_NAME"; //$NON-NLS-1$
 	protected static final int TEXT = 100;
 	protected static final int BROWSE = 101;
@@ -65,38 +64,35 @@ public class MultipleInputDialog extends Dialog
 	/**
 	 * Create a new instance of this.
 	 * 
-	 * @param shell the shell to open the dialog on
-	 * @param title the title for the dialog
+	 * @param shell
+	 *            the shell to open the dialog on
+	 * @param title
+	 *            the title for the dialog
 	 */
-	public MultipleInputDialog(final Shell shell, final String title)
-	{
+	public MultipleInputDialog(final Shell shell, final String title) {
 		super(shell);
 		this.title = title;
 		setShellStyle(getShellStyle() | SWT.RESIZE);
 	}
 
 	@Override
-	protected void configureShell(Shell shell)
-	{
+	protected void configureShell(Shell shell) {
 		super.configureShell(shell);
-		if (title != null)
-		{
+		if (title != null) {
 			shell.setText(title);
 		}
 
 	}
 
 	@Override
-	protected Control createButtonBar(Composite parent)
-	{
+	protected Control createButtonBar(Composite parent) {
 		Control bar = super.createButtonBar(parent);
 		validateFields();
 		return bar;
 	}
 
 	@Override
-	protected Control createDialogArea(Composite parent)
-	{
+	protected Control createDialogArea(Composite parent) {
 		Composite container = (Composite) super.createDialogArea(parent);
 		// ((GridData) parent.getLayoutData()).heightHint = 400;
 		// ((GridData) parent.getLayoutData()).widthHint = 400;
@@ -112,24 +108,24 @@ public class MultipleInputDialog extends Dialog
 		panel.setLayout(layout);
 		panel.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
 
-		for (Iterator<FieldSummary> i = fieldList.iterator(); i.hasNext();)
-		{
+		for (Iterator<FieldSummary> i = fieldList.iterator(); i.hasNext();) {
 			FieldSummary field = i.next();
-			switch (field.type)
-			{
-				case TEXT:
-					createTextField(field.name, field.initialValue, field.allowsEmpty);
-					break;
-				// case BROWSE:
-				// createBrowseField(field.name, field.initialValue,
-				// field.allowsEmpty);
-				// break;
-				case VARIABLE:
-					createVariablesField(field.name, field.initialValue, field.allowsEmpty);
-					break;
-				case COMBO:
-					createComboField(field.name, field.initialIndex, field.items);
-					break;
+			switch (field.type) {
+			case TEXT:
+				createTextField(field.name, field.initialValue,
+						field.allowsEmpty);
+				break;
+			// case BROWSE:
+			// createBrowseField(field.name, field.initialValue,
+			// field.allowsEmpty);
+			// break;
+			case VARIABLE:
+				createVariablesField(field.name, field.initialValue,
+						field.allowsEmpty);
+				break;
+			case COMBO:
+				createComboField(field.name, field.initialIndex, field.items);
+				break;
 			}
 		}
 
@@ -142,53 +138,67 @@ public class MultipleInputDialog extends Dialog
 	/**
 	 * Add a label, text box and button for browsing the for a file.
 	 * 
-	 * @param labelText the label
-	 * @param initialValue the initial value
-	 * @param allowsEmpty true if the text box can be empty
+	 * @param labelText
+	 *            the label
+	 * @param initialValue
+	 *            the initial value
+	 * @param allowsEmpty
+	 *            true if the text box can be empty
 	 */
-	public void addBrowseField(String labelText, String initialValue, boolean allowsEmpty)
-	{
-		fieldList.add(new FieldSummary(BROWSE, labelText, initialValue, allowsEmpty));
+	public void addBrowseField(String labelText, String initialValue,
+			boolean allowsEmpty) {
+		fieldList.add(new FieldSummary(BROWSE, labelText, initialValue,
+				allowsEmpty));
 	}
 
 	/**
 	 * Add a label and a text box.
 	 * 
-	 * @param labelText the label
-	 * @param initialValue the initial value
-	 * @param allowsEmpty true if the text box can be empty
+	 * @param labelText
+	 *            the label
+	 * @param initialValue
+	 *            the initial value
+	 * @param allowsEmpty
+	 *            true if the text box can be empty
 	 */
-	public void addTextField(String labelText, String initialValue, boolean allowsEmpty)
-	{
-		fieldList.add(new FieldSummary(TEXT, labelText, initialValue, allowsEmpty));
+	public void addTextField(String labelText, String initialValue,
+			boolean allowsEmpty) {
+		fieldList.add(new FieldSummary(TEXT, labelText, initialValue,
+				allowsEmpty));
 	}
 
 	/**
 	 * Add a label, a text box and a button for selecting variables.
 	 * 
-	 * @param labelText the label
-	 * @param initialValue the initial value
-	 * @param allowsEmpty true if the text box can be empty
+	 * @param labelText
+	 *            the label
+	 * @param initialValue
+	 *            the initial value
+	 * @param allowsEmpty
+	 *            true if the text box can be empty
 	 */
-	public void addVariablesField(String labelText, String initialValue, boolean allowsEmpty)
-	{
-		fieldList.add(new FieldSummary(VARIABLE, labelText, initialValue, allowsEmpty));
+	public void addVariablesField(String labelText, String initialValue,
+			boolean allowsEmpty) {
+		fieldList.add(new FieldSummary(VARIABLE, labelText, initialValue,
+				allowsEmpty));
 	}
 
 	/**
 	 * Add a label and a combo.
 	 * 
-	 * @param labelText the label
-	 * @param initialIndex the initial selection index
-	 * @param items the array of items for the combo
+	 * @param labelText
+	 *            the label
+	 * @param initialIndex
+	 *            the initial selection index
+	 * @param items
+	 *            the array of items for the combo
 	 */
-	public void addComboField(String labelText, int initialIndex, String[] items)
-	{
+	public void addComboField(String labelText, int initialIndex, String[] items) {
 		fieldList.add(new FieldSummary(COMBO, labelText, items, initialIndex));
 	}
 
-	protected void createTextField(String labelText, String initialValue, boolean allowEmpty)
-	{
+	protected void createTextField(String labelText, String initialValue,
+			boolean allowEmpty) {
 		Label label = new Label(panel, SWT.NONE);
 		label.setText(labelText);
 		label.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
@@ -200,25 +210,19 @@ public class MultipleInputDialog extends Dialog
 		// make sure rows are the same height on both panels.
 		label.setSize(label.getSize().x, text.getSize().y);
 
-		if (initialValue != null)
-		{
+		if (initialValue != null) {
 			text.setText(initialValue);
 		}
 
-		if (!allowEmpty)
-		{
-			validators.add(new Validator()
-			{
+		if (!allowEmpty) {
+			validators.add(new Validator() {
 				@Override
-				public boolean validate()
-				{
+				public boolean validate() {
 					return !text.getText().equals(""); //$NON-NLS-1$
 				}
 			});
-			text.addModifyListener(new ModifyListener()
-			{
-				public void modifyText(ModifyEvent e)
-				{
+			text.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
 					validateFields();
 				}
 			});
@@ -227,8 +231,8 @@ public class MultipleInputDialog extends Dialog
 		controlList.add(text);
 	}
 
-	protected void createVariablesField(String labelText, String initialValue, boolean allowEmpty)
-	{
+	protected void createVariablesField(String labelText, String initialValue,
+			boolean allowEmpty) {
 		Label label = new Label(panel, SWT.NONE);
 		label.setText(labelText);
 		label.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
@@ -249,44 +253,36 @@ public class MultipleInputDialog extends Dialog
 		// make sure rows are the same height on both panels.
 		label.setSize(label.getSize().x, text.getSize().y);
 
-		if (initialValue != null)
-		{
+		if (initialValue != null) {
 			text.setText(initialValue);
 		}
 
-		if (!allowEmpty)
-		{
-			validators.add(new Validator()
-			{
+		if (!allowEmpty) {
+			validators.add(new Validator() {
 				@Override
-				public boolean validate()
-				{
+				public boolean validate() {
 					return !text.getText().equals(""); //$NON-NLS-1$
 				}
 			});
 
-			text.addModifyListener(new ModifyListener()
-			{
-				public void modifyText(ModifyEvent e)
-				{
+			text.addModifyListener(new ModifyListener() {
+				public void modifyText(ModifyEvent e) {
 					validateFields();
 				}
 			});
 		}
 
-		Button button = createButton(comp, IDialogConstants.IGNORE_ID, Messages.VariablesFieldButton_Text, false);
-		button.addSelectionListener(new SelectionAdapter()
-		{
+		Button button = createButton(comp, IDialogConstants.IGNORE_ID,
+				Messages.VariablesFieldButton_Text, false);
+		button.addSelectionListener(new SelectionAdapter() {
 			@Override
-			public void widgetSelected(SelectionEvent e)
-			{
-				StringVariableSelectionDialog dialog = new StringVariableSelectionDialog(getShell());
+			public void widgetSelected(SelectionEvent e) {
+				StringVariableSelectionDialog dialog = new StringVariableSelectionDialog(
+						getShell());
 				int code = dialog.open();
-				if (code == IDialogConstants.OK_ID)
-				{
+				if (code == IDialogConstants.OK_ID) {
 					String variable = dialog.getVariableExpression();
-					if (variable != null)
-					{
+					if (variable != null) {
 						text.insert(variable);
 					}
 				}
@@ -297,8 +293,8 @@ public class MultipleInputDialog extends Dialog
 
 	}
 
-	protected void createComboField(String labelText, int initialValue, String[] items)
-	{
+	protected void createComboField(String labelText, int initialValue,
+			String[] items) {
 		Label label = new Label(panel, SWT.NONE);
 		label.setText(labelText);
 		label.setLayoutData(new GridData(GridData.HORIZONTAL_ALIGN_BEGINNING));
@@ -310,7 +306,8 @@ public class MultipleInputDialog extends Dialog
 		comp.setLayout(layout);
 		comp.setLayoutData(new GridData(GridData.FILL_HORIZONTAL));
 
-		final Combo combo = new Combo(comp, SWT.SINGLE | SWT.BORDER | SWT.READ_ONLY);
+		final Combo combo = new Combo(comp, SWT.SINGLE | SWT.BORDER
+				| SWT.READ_ONLY);
 		// GridData data = new GridData(GridData.FILL_HORIZONTAL);
 		// data.widthHint = 200;
 		// combo.setLayoutData(data);
@@ -327,19 +324,16 @@ public class MultipleInputDialog extends Dialog
 	}
 
 	@Override
-	protected void okPressed()
-	{
-		for (Iterator<Scrollable> i = controlList.iterator(); i.hasNext();)
-		{
+	protected void okPressed() {
+		for (Iterator<Scrollable> i = controlList.iterator(); i.hasNext();) {
 			Control control = i.next();
-			if (control instanceof Text)
-			{
-				valueMap.put(control.getData(FIELD_NAME), ((Text) control).getText());
-			}
-			else if (control instanceof Combo)
-			{
+			if (control instanceof Text) {
+				valueMap.put(control.getData(FIELD_NAME), ((Text) control)
+						.getText());
+			} else if (control instanceof Combo) {
 				Combo combo = (Combo) control;
-				valueMap.put(control.getData(FIELD_NAME), new Integer(combo.getSelectionIndex()));
+				valueMap.put(control.getData(FIELD_NAME), Integer.valueOf(combo
+						.getSelectionIndex()));
 			}
 		}
 		controlList = null;
@@ -347,34 +341,27 @@ public class MultipleInputDialog extends Dialog
 	}
 
 	@Override
-	public int open()
-	{
+	public int open() {
 		applyDialogFont(panel);
 		return super.open();
 	}
 
-	protected Object getValue(String key)
-	{
+	protected Object getValue(String key) {
 		return valueMap.get(key);
 	}
 
-	protected String getStringValue(String key)
-	{
+	protected String getStringValue(String key) {
 		return (String) getValue(key);
 	}
 
-	protected int getIntValue(String key)
-	{
+	protected int getIntValue(String key) {
 		return ((Integer) getValue(key)).intValue();
 	}
 
-	protected void validateFields()
-	{
-		for (Iterator<Validator> i = validators.iterator(); i.hasNext();)
-		{
+	protected void validateFields() {
+		for (Iterator<Validator> i = validators.iterator(); i.hasNext();) {
 			Validator validator = i.next();
-			if (!validator.validate())
-			{
+			if (!validator.validate()) {
 				getButton(IDialogConstants.OK_ID).setEnabled(false);
 				return;
 			}
@@ -382,25 +369,23 @@ public class MultipleInputDialog extends Dialog
 		getButton(IDialogConstants.OK_ID).setEnabled(true);
 	}
 
-	private String getDialogSettingsSectionName()
-	{
+	private String getDialogSettingsSectionName() {
 		return XSLDebugUIPlugin.PLUGIN_ID + ".MULTIPLE_INPUT_DIALOG"; //$NON-NLS-1$
 	}
 
 	@Override
-	protected IDialogSettings getDialogBoundsSettings()
-	{
-		IDialogSettings settings = XSLDebugUIPlugin.getDefault().getDialogSettings();
-		IDialogSettings section = settings.getSection(getDialogSettingsSectionName());
-		if (section == null)
-		{
+	protected IDialogSettings getDialogBoundsSettings() {
+		IDialogSettings settings = XSLDebugUIPlugin.getDefault()
+				.getDialogSettings();
+		IDialogSettings section = settings
+				.getSection(getDialogSettingsSectionName());
+		if (section == null) {
 			section = settings.addNewSection(getDialogSettingsSectionName());
 		}
 		return section;
 	}
 
-	protected class FieldSummary
-	{
+	protected static class FieldSummary {
 		int initialIndex;
 		int type;
 		String name;
@@ -408,26 +393,24 @@ public class MultipleInputDialog extends Dialog
 		boolean allowsEmpty;
 		String[] items;
 
-		public FieldSummary(int type, String name, String initialValue, boolean allowsEmpty)
-		{
+		public FieldSummary(int type, String name, String initialValue,
+				boolean allowsEmpty) {
 			this.type = type;
 			this.name = name;
 			this.initialValue = initialValue;
 			this.allowsEmpty = allowsEmpty;
 		}
 
-		public FieldSummary(int type, String name, String[] items, int initialIndex)
-		{
+		public FieldSummary(int type, String name, String[] items,
+				int initialIndex) {
 			this.type = type;
 			this.name = name;
 			this.items = items;
 		}
 	}
 
-	protected class Validator
-	{
-		boolean validate()
-		{
+	protected class Validator {
+		boolean validate() {
 			return true;
 		}
 	}
